--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,39 +1,17 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  font-size: 16px;
+  
+  > h1 {
+    color: #888888;
   }
 }
 
 body {
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  background-color: #FDFDFD;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -44,4 +22,32 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+button {
+  border: none;
+  background: none;
+  outline: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px;
+  transition: all .3s ease;
+  font-size: 16px;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:active:not(:disabled) {
+    filter: brightness(120%);
+  }
+
+  &:disabled {
+    filter: grayscale(100%);
+    opacity: .6;
+    cursor: not-allowed;
+  }
 }
