--- a/src/GridCell/GridCell.module.scss
+++ b/src/GridCell/GridCell.module.scss
@@ -1,4 +1,5 @@
 .GridCell {
+  padding: 0;
   width: 40px;
   height: 40px;
   box-sizing: border-box;
@@ -10,4 +11,17 @@
   &:hover {
     background-color: #F0F0F0;
   }
+}
+
+.obstacle {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(#BBB, .1);
+}
+
+.mark {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+  margin-top: 3px;
 }
