--- a/src/GridCell/GridCell.module.scss
+++ b/src/GridCell/GridCell.module.scss
@@ -25,3 +25,11 @@
   object-fit: contain;
   margin-top: 3px;
 }
+
+.intersection {
+  width: 15px;
+  height: 15px;
+  background-color: #5ab109;
+  border-radius: 20px;
+  margin: auto;
+}
