--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -7,6 +7,22 @@
   }
 }
 
+.gridContainer {
+  display: inline-block;
+  position: relative;
+  padding-bottom: 80px;
+}
+
+.saveButton {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: #5ab109;
+  font-size: 18px;
+  box-shadow: 0 3px 15px -2px rgba(#5ab109, .8);
+  color: white;
+}
+
 body {
   margin: 0;
   padding: 0;
