--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -3,7 +3,7 @@
   font-size: 16px;
   
   > h1 {
-    color: #5ab109;
+    color: #584da0;
   }
 }
 
@@ -17,9 +17,9 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  background-color: #5ab109;
+  background-color: #584da0;
   font-size: 18px;
-  box-shadow: 0 3px 15px -2px rgba(#5ab109, .8);
+  box-shadow: 0 3px 15px -2px rgba(#584da0, .8);
   color: white;
 }
 
