--- a/src/GridCell/GridCell.module.scss
+++ b/src/GridCell/GridCell.module.scss
@@ -29,7 +29,7 @@
 .intersection {
   width: 15px;
   height: 15px;
-  background-color: #5ab109;
+  background-color: #584da0;
   border-radius: 20px;
   margin: auto;
 }
