--- a/src/Toolbox/MarkTool/LocationForm/LocationForm.module.scss
+++ b/src/Toolbox/MarkTool/LocationForm/LocationForm.module.scss
@@ -34,8 +34,8 @@
 }
 
 .button {
-  background-color: #5ab109;
-  box-shadow: 0 3px 15px -2px rgba(#5ab109, .8);
+  background-color: #584da0;
+  box-shadow: 0 3px 15px -2px rgba(#584da0, .8);
   color: white;
 }
 
