--- a/src/Toolbox/MarkTool/MarkTool.module.scss
+++ b/src/Toolbox/MarkTool/MarkTool.module.scss
@@ -7,8 +7,8 @@
   height: 80px;
 
   &.active {
-    background-color: #5ab109;
-    box-shadow: 0 3px 15px -2px rgba(#5ab109, .8);
+    background-color: #584da0;
+    box-shadow: 0 3px 15px -2px rgba(#584da0, .8);
     color: white;
   }
 }
