--- a/src/Toolbox/CommonTool/CommonTool.module.scss
+++ b/src/Toolbox/CommonTool/CommonTool.module.scss
@@ -1,10 +1,30 @@
 .CommonTool {
   width: 80px;
   height: 80px;
+  position: relative;
 
   &.active {
     background-color: #584da0;
     box-shadow: 0 3px 15px -2px rgba(#584da0, .8);
     color: white;
   }
+
+  &:not(:hover) .Tooltip {
+    opacity: 0;
+    margin-left: -5px;
+  }
+}
+
+.Tooltip {
+  position: absolute;
+  left: calc(100% + 20px);
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #584da0;
+  box-shadow: 0 3px 15px -2px rgba(#584da0, .8);
+  transition: all .2s ease;
+  color: white;
+  font-size: 14px;
 }
