--- a/src/Resize/Resize.module.scss
+++ b/src/Resize/Resize.module.scss
@@ -17,4 +17,6 @@
   border: solid 1px rgba(black, .2);
   box-shadow: 0 5px 15px -5px rgba(black, .1);
   padding: 12px;
+  width: 60px;
+  margin: 0 8px;
 }
